# fbdebugger

./: .gitignore  CMakeLists.txt  ReadMe.md  info.txt
doc/: CMakeLists.txt  Doxyfile  fb-doc.lfn  fbdbg.xml
src/: CMakeLists.txt  GladeToBac.ini  accels.tst  expand.ui  fbdbg.bas  fbdbg.ui  fbdebugger.ini  log.ui  main.bas  main.pot  main.ui  testing.bas  version.bas  version.bas.in
src/core/: CMakeLists.txt  core.bi  core1.bas  core2.bas  fbdbg2_defines.bi  fbdbg2_extract.bas  fbdbg2_handlefiles.bas  fbdbg2_main.bas  ini.bas
src/dat/: accelerators.rc  accelerators.rc.org  fbd.xml  fbd_colors.xml  fbdebugger.xml  freebasic.lang  gtksourceview.xml~
src/doc/: _changelog.md  _examples.md  _features.md  _messages.md  _preparation.md
src/gui/: actions.bas  expand.bas  filechoosers.bas  gui.bas  gui.bi  ini.bas  log_notes.bas  main.bas  mbar_buttons.bas  menu_procs.bas  menu_procvar.bas  menu_source.bas  menu_threads.bas  menu_tools.bas  menu_watch.bas  multi_action.bas  settings.bas  shortcuts.bas  source.bas
src/locale/de/LC_MESSAGES/: fbdbg.mo  fbdbg.po
src/locale/fr/LC_MESSAGES/: fbdbg.mo  fbdbg.po
src/locale/nl/LC_MESSAGES/: fbdbg.mo  fbdbg.po
src/tobac/: act_Settings.bas  act_Shortcut.bas  act_ToDo.bas  act_attachexe.bas  act_auto.bas  act_automulti.bas  act_bdhtrans.bas  act_bmknext.bas  act_bmkprev.bas  act_bmktoogle.bas  act_brkenable.bas  act_brkmanage.bas  act_brkset.bas  act_brktempset.bas  act_bzexchange.bas  act_compinfo.bas  act_compnrun.bas  act_dlllist.bas  act_enumlist.bas  act_exemod.bas  act_fastrun.bas  act_fasttimer.bas  act_files.bas  act_free.bas  act_help.bas  act_idelaunch.bas  act_jitset.bas  act_kill.bas  act_lineaddress.bas  act_lineasm.bas  act_linefocus.bas  act_linegoto.bas  act_linenoexec.bas  act_logdel.bas  act_loghide.bas  act_logshow.bas  act_memory.bas  act_minicmd.bas  act_multiexe.bas  act_notes.bas  (+100 more)
